# SportWarzSim

./: .gitignore  Blank.ipynb  Blank.md  Cargo.toml  Dockerfile  Income2023.csv  Interactive.ipynb  Interactive.md  InteractiveMLB.ipynb  InteractiveMLS.ipynb  InteractiveNBA.ipynb  InteractiveNFL.ipynb  InteractiveNHL.ipynb  MLBExpansion.ipynb  MLB_Expansion_NSH.ipynb  MLB_Expansion_PDX.ipynb  MLB_Expansion_RAL.ipynb  MLB_Expansion_SA.ipynb  MLB_Expansion_SLC.ipynb  MLB_Expansion_SLC_PDX.ipynb  MLB_Expansion_SLC_PDX_NSH_RAL.ipynb  MLB_Relocation_CWS_CLT.ipynb  MLB_Relocation_CWS_NSH.ipynb  MLB_Relocation_CWS_PDX.ipynb  MLB_Relocation_CWS_RAL.ipynb  MLB_Relocation_CWS_SA.ipynb  MLB_Relocation_CWS_SLC.ipynb  MLB_Relocation_KC_NSH.ipynb  MLB_Relocation_KC_PDX.ipynb  MLB_Relocation_KC_RAL.ipynb  MLB_Relocation_KC_SA.ipynb  MLB_Relocation_KC_SLC.ipynb  MLB_Relocation_OAK_LV.ipynb  MLB_Relocation_OAK_SAC.ipynb  MLB_Relocation_TB_ORL.ipynb  MLSExpansion.ipynb  MLS_Expansion_USLC.ipynb  MLS_Relocation_VAN_IND.ipynb  MLS_Relocation_VAN_LV.ipynb  NBAExpansion.ipynb  (+34 more)
jupyter/: .gitignore  Cargo.toml  InteractiveMLB.ipynb  InteractiveNBA.ipynb  InteractiveNHL.ipynb  MLB_Expansion_RAL.ipynb  MLB_Expansion_SLC.ipynb  MLB_Relocation_CWS_RAL.ipynb  MLB_Relocation_CWS_SLC.ipynb  MLB_Relocation_KC_NSH.ipynb  MLB_Relocation_KC_PDX.ipynb  MLB_Relocation_KC_RAL.ipynb  MLB_Relocation_TB_ORL.ipynb  MLS_Expansion_USLC.ipynb  MLS_Relocation_VAN_IND.ipynb  MLS_Relocation_VAN_PHX.ipynb  MLS_Relocation_VAN_SAC.ipynb  NBA_Expansion_SD.ipynb  NBA_Expansion_STL.ipynb  NBA_Relocation_MEM_NSH.ipynb  (+12 more)
(+34 files in other folders)
