[package]
name = "pyrust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
serde = "1.0.228"
serde_json = "1.0.149"
pythonize = "0.27.0"
geojson = "1.0.0"
geo = "0.33.1"
geo-types = "0.7.19"
geos = { version = "11.1.1", features = ["geo", "static"] }
proj = { version = "0.31.0", features = ["bundled_proj", "geo-types"] }
csv = "1.4.0"
rayon = "1.12.0"
ndarray = "0.17.2"
ndarray-stats = "0.7.0"
wkt = { version = "0.10", features = ["geo-types"] }