[package]
name = "pyrust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
serde = "1.0.228"
serde_json = "1.0.149"
pythonize = "0.27.0"
rust_calc = { version = "0.1.0", path = "../rust_calc" }